fixed festival header expand/collapse button styles

--- a/site/themes/s2b_hugo_theme/assets/css/cal/main.css
+++ b/site/themes/s2b_hugo_theme/assets/css/cal/main.css
@@ -355,7 +355,7 @@ h3 {
 
 button.expand-details {
     user-select: text;
-    display: flex;
+    display: inline-flex;
     overflow-wrap: anywhere;
 }
 
@@ -363,9 +363,6 @@ button.expand-details svg {
     min-width: 22px;
     min-height: 22px;
 }
-
-
-
 
 .eventImg img {
     float: right;
